<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bcg_as">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:src="@drawable/ic_grou"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_f"
        style="@style/tv_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/gothamfont"
        android:text="@string/d"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_sam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.552" />

    <Button
        android:id="@+id/btn_sam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="250dp"
        android:fontFamily="@font/gothamfont"
        android:background="@drawable/btn_red"
        android:backgroundTint="@color/red_btn"
        android:textAllCaps="false"
        android:maxWidth="200dp"
        android:minWidth="260dp"
        android:padding="15dp"
        android:text="@string/sambo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_f"
        app:layout_constraintVertical_bias="0.94" />

    <Button
        android:id="@+id/btn_trener"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_drawble"
        android:fontFamily="@font/gothamfont"
        android:maxWidth="200dp"
        android:minWidth="260dp"
        android:textAllCaps="false"
        android:padding="15dp"
        android:text="@string/trener"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sam" />

    <Button
        android:id="@+id/btn_parend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_drawble"
        android:maxWidth="200dp"
        android:minWidth="260dp"
        android:textAllCaps="false"
        android:padding="15dp"
        android:text="@string/ncjnf"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_trener" />


</androidx.constraintlayout.widget.ConstraintLayout>